Fixed bug #36222 (errorInfo in PDOException is always NULL).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@206182 c90b9560-bf6c-de11-be94-00142212c4b1